Sun May 12 15:51:47 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: remove AC_CHECK_FUNC(close). It is not used from
	  anywhere.

Sun May 12 15:50:45 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: adds comments for setjmp check.

Sun May 12 15:38:09 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: move clock_gettime() check into regular place.

Wed May  8 13:45:53 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: add getenv() declaration check.
	* dln_find.c: add HAVE_DECL_GETENV test.

Sun May 12 15:33:18 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: sorts AC_CHECK_FUNCS()s as alphabetical order.

Wed May  8 13:41:57 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* bignum.c: remove redundant decl for big_lshift() big_rshift().

Sun May 12 16:06:43 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/rubysocket.h (rsock_inspect_sockaddr): as r40646
	  check HAVE_TYPE_STRUCT_SOCKADDR_DL.

Sat May 11 23:01:58 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/rubysocket.h (HAVE_TYPE_STRUCT_SOCKADDR_DL):
	  MSVC has struct sockaddr_dl, but its content is broken.
	  http://ruby-mswin.cloudapp.net/vc10-x64/ruby-trunk/log/20130511T103938Z.log.html.gz

Sat May 11 22:07:42 2013  Tanaka Akira  <akr@fsij.org>

	* test/rinda/test_rinda.rb: Socket.getifaddrs may returns an interface
	  which #addr method returns nil for venet0 in OpenVZ.

Sat May 11 21:56:34 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (rsock_inspect_sockaddr): Add casts to
	  suppress warnings.

Sat May 11 17:28:51 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket: New method, Socket.getifaddrs, implemented.
	  [ruby-core:54777] [Feature #8368]

Sat May 11 00:47:22 2013  Tanaka Akira  <akr@fsij.org>

	* gc.h (SET_MACHINE_STACK_END): Add !defined(_ILP32) to a defining
	  condition to avoid compilation error on x32.
	  https://sites.google.com/site/x32abi/
