@@ -1743,11 +1743,7 @@ AC_CHECK_FUNCS(fcntl)
 AC_CHECK_FUNCS(fdatasync)
 AC_CHECK_FUNCS(fmod)
 AC_CHECK_FUNCS(fork)
-AC_CHECK_FUNCS(fseeko)
-AC_CHECK_FUNCS(fseeko64)
 AC_CHECK_FUNCS(fsync)
-AC_CHECK_FUNCS(ftello)
-AC_CHECK_FUNCS(ftello64)
 AC_CHECK_FUNCS(ftruncate)
 AC_CHECK_FUNCS(ftruncate64)
 AC_CHECK_FUNCS(getcwd)
