@@ -1,3 +1,14 @@
+Sun May 12 16:03:41 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* configure.in: removes AC_CHECK_FUNC(fseeko, fseeko64, ftello,
+	  ftello64). They are not used from anywhere.
+
+	* win32/win32.c (fseeko): removes.
+	* win32/win32.c (rb_w32_ftello): removes.
+	* include/ruby/win32.h: removes declarations of rb_w32_ftello and
+	  rb_w32_fseeko.
+	* win32/Makefile.sub: removes '#define HAVE_FTELLO 1'.
+
 Sun May 12 15:51:47 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* configure.in: remove AC_CHECK_FUNC(close). It is not used from
